2004-01-23  Mikael Hallendal  <micke@imendio.com>
	
	* Release 0.15.1

	* NEWS: 
	* configure.in:
	- Updated to 0.15.1

2004-01-22  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	* loudmouth/lm-ssl.c: (ssl_verify_certificate):
	Don't use deprecated function of gnutls.
	Now requires gnutls >= 1.0.0

2004-01-21  Mikael Hallendal  <micke@imendio.com>

	* Release 0.15.

2004-01-21  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* configure.in:
	- Removed the mono bindings for now.

2004-01-21  Richard Hult  <richard@imendio.com>

	* loudmouth.spec.in: 
	- The library changed name, update to libloudmouth-1.la.
	
2004-01-21  Mikael Hallendal  <micke@imendio.com>

	* docs/reference/tmpl/lm-ssl.sgml:
	* loudmouth/lm-ssl.c:
	- Added API documentation

2004-01-21  Mikael Hallendal  <micke@imendio.com>

	* docs/reference/loudmouth-docs.sgml:
	* docs/reference/loudmouth-sections.txt:
	* docs/reference/tmpl/lm-connection.sgml:
	* docs/reference/tmpl/loudmouth-unused.sgml:
	* docs/reference/tmpl/lm-ssl.sgml:
	* loudmouth/lm-ssl.h:
	- Added new file to documentation

2004-01-21  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* configure.in: Work on the C# bindings
	* NEWS: Preparing for 0.15
	* loudmouth-1.0.pc.in: Versioned the library
	* loudmouth/Makefile.am: ditto
	* loudmouth/lm-connection.c: 
	* loudmouth/lm-connection.h: Disabled the proxy support.
	* mono/Makefile:
	* mono/Makefile.am:
	* mono/loudmouth/Makefile.am:
	* mono/loudmouth/loudmouth-api.xml:
	* mono/loudmouth/loudmouth.metadata:
	* mono/sources/loudmouth-sources.xml:
	- WIP on the bindings, first cut of generated bindings.

2004-01-16  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	(connection_failed_with_error),
	(connection_connect_cb): 
	(connection_do_connect):
	- Don't fall through after calling connection_failed.
	- Fixed bug #130449

2004-01-15  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/Makefile.am:
	- Added lm-ssl.[ch]